<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/text_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Score : 0"
            android:textSize="16sp"
            android:textColor="#333"
            android:paddingBottom="8dp"/>


        <TextView
            android:id="@+id/text_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="string/guess_temperature_instruction"
            android:textSize="16sp"
            android:paddingBottom="16dp" />

        <TextView
            android:id="@+id/text_ville_tiree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/city_drawn_label"
            android:textSize="16sp"
            android:textColor="#555555"
            android:paddingBottom="12dp" />


        <EditText
            android:id="@+id/input_difference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_temperature_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valider"
            android:layout_marginTop="24dp" />

        <Button
            android:id="@+id/button_retour_temp_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="16dp"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>