<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Description du jeu -->
    <TextView
        android:id="@+id/text_description_distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_distance_game"
        android:textSize="16sp"
        android:textColor="#333333"
        android:lineSpacingExtra="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bouton Jouer -->
    <Button
        android:id="@+id/button_jouer_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/text_description_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bouton Retour -->
    <Button
        android:id="@+id/button_retour_distance_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_jouer_distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
