<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_app"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#333333"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"/>

        <!-- Jeu 1 : Filtre Photo -->
        <LinearLayout
            android:id="@+id/card_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_photo" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/name_photo"
                android:textSize="18sp"
                android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_midterm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_politics" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/name_midterm_race"
                android:textSize="18sp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_champi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_mushroom" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/name_champi"
                android:textSize="18sp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_dessin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_brush" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/name_dessin"
                android:textSize="18sp"
                android:textColor="#000000" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/card_circuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_track" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/name_circuit"
                android:textSize="18sp"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/card_background"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_weather" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/name_temperature_game"
                android:textSize="18sp"
                android:textColor="#000000" />
        </LinearLayout>




        <!-- Tu pourras ajouter d'autres boutons ici -->
        <Button
            android:id="@+id/button_autre_jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="(À venir) Autre jeu"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>
